--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,11 @@ h1 {
   margin-bottom: 10px;
   text-align: center;
   letter-spacing: 0.5px;
+  font-family: 'League Spartan', sans-serif;
 }
-
+.p{
+  font-family: 'League Spartan', sans-serif;
+}
 .desc {
   font-size: 1.08rem;
   color: #444;
